--- a/TestProject_WithBrowserStack/test-output/old/Default suite/classes.html
+++ b/TestProject_WithBrowserStack/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>MobileTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>TestGoogleLauchWithBS</td>
 <td>&nbsp;</td></tr>
 <tr>
